chart/templates/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
    - port: 9000
      name: api
      targetPort: 9000
      protocol: TCP
    - port: 9001
      name: console
      targetPort: 9001
      protocol: TCP
  selector:
    app: minio
