chart/templates/ninetofiver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ninetofiver
  name: ninetofiver
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    app: ninetofiver
