chart/templates/ninetofiver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ninetofiver
  labels:
    app: ninetofiver
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: ninetofiver.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ninetofiver
                port:
                  number: 8000
